--- a/cv/index.html
+++ b/cv/index.html
@@ -9,6 +9,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="icon" type="image/png" href="cvicon.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="cv.png" />
 
     <!-- Bootstrap CSS -->
     <link
