--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" type="image/png" sizes="64x64" href="cv.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="ico/cv_v2_64px.png" />
 
     <!-- Bootstrap CSS -->
     <link
