--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br>
             </div>
         </section>
-  <iframe width="32" height="18" src="https://www.youtube.com/embed/ddxPjf2ItOM?autoplay=1&mute=1" title="Moonlit Serenade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="32" height="18" src="https://www.youtube.com/embed/ddxPjf2ItOM?autoplay=1&mute=1&loop=1&playlist=ddxPjf2ItOM" title="Moonlit Serenade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       
     </main>
 </body>
