--- a/bmdc/index.html
+++ b/bmdc/index.html
@@ -13,7 +13,11 @@
         margin: auto;
       }
       h1,
-      h2,
+      h2 {
+        font-size: 1.2em; /* Adjust the font size as needed */
+        font-weight: bold;
+        color: #333; /* Set your preferred text color */
+      }
       h3 {
         color: #333;
       }
@@ -75,6 +79,11 @@
         </pre
       >
     </section>
+    <h2>
+      Use the captcha source image and take the input from user. Pass the
+      captcha input and doctor registration number from user along with the
+      other responses from get request as parameter in post request
+    </h2>
 
     <section>
       <h2>Get Doctor Info</h2>
