--- a/bmdc/index.html
+++ b/bmdc/index.html
@@ -129,7 +129,7 @@
     </section>
     <h1>Version 2</h1>
     <section>
-      <h2>Get Doctor Info</h2>
+      <h2>GET Doctor info with autocomplete captcha</h2>
       <p><span class="request-type">Request Type:</span> POST</p>
       <p>
         <span class="request-type">Request URL:</span>
@@ -138,8 +138,8 @@
       <p><span class="request-type">Parameters (as JSON):</span></p>
       <pre>
 {
-    "reg_no": 122431,
-    "try_time":12 //optuinal, the default value is set to 10
+    "reg_no": 122431
+    "try_time":12 //optional, the default value is set to 10 just reg_no is fine, if having trouble with not getting response, increase its value
 }
         </pre
       >
