--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
                 <br>
                 <div class="mt-4 mx-auto d-flex justify-content-center" id="profile-links">
-                    <a href="www.linkedin.com/in/jahidmohammad00" target="_blank"><i class="fab fa-linkedin icon"></i></a>
+                    <a href="https://linkedin.com/in/jahidmohammad00" target="_blank"><i class="fab fa-linkedin icon"></i></a>
                     <a href="mailto:zenjahid@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a>
                     <a href="https://github.com/zenjahid" target="_blank"><i class="fab fa-github icon"></i></a>
                    
